--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=api
+
+# Database
+spring.datasource.url=jdbc:mysql://localhost:3306/DuckLibras
+spring.datasource.username=pinguim
+spring.datasource.password=pinguim788
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+spring.datasource.timeBetweenEvictionRunsMillis=3600000
