--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 spring.datasource.timeBetweenEvictionRunsMillis=3600000
+
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DLL_AUTO}
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
+spring.main.allow-bean-definition-overriding=true
