--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -8,6 +8,14 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 spring.datasource.timeBetweenEvictionRunsMillis=3600000
+# Database russo
+spring.datasource.url=jdbc:mysql://localhost:3306/DuckLibras
+spring.datasource.username=junior
+spring.datasource.password=26354
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+spring.datasource.timeBetweenEvictionRunsMillis=3600000
 
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DLL_AUTO}
