--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -8,3 +8,32 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 spring.datasource.timeBetweenEvictionRunsMillis=3600000
+
+# JPA
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
+spring.main.allow-bean-definition-overriding=true
+
+# Server
+server.port=8080
+
+# Logging
+logging.level.org.springframework=INFO
+logging.level.com.springapi=DEBUG
+
+# JWT
+jwt.prefix=Bearer
+jwt.secret=secret
+jwt.header=Authorization
+jwt.expiration=86400000
+
+# Swagger
+swagger.api.title=Vottech Spring API
+swagger.api.description=API made to vote on a techinology event
+swagger.api.version=1.0
+swagger.api.contact.name=Spring API
+swagger.api.contact.email=lkevinvinagre@hotmail.com
