--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -32,8 +32,25 @@ jwt.header=Authorization
 jwt.expiration=86400000
 
 # Swagger
-swagger.api.title=Vottech Spring API
-swagger.api.description=API made to vote on a techinology event
+swagger.api.title=DuckLibras Api
+swagger.api.description=API 
 swagger.api.version=1.0
-swagger.api.contact.name=Spring API
-swagger.api.contact.email=lkevinvinagre@hotmail.com
+swagger.api.contact.name=DuckLibras Api
+swagger.api.contact.email=rebecafreitasreis7@gmail.com
+
+# CORS
+cors.allowed.origins=*
+cors.allowed.methods=GET,POST,PUT,DELETE,OPTIONS
+cors.allowed.headers=Authorization,Content-Type
+cors.exposed.headers=Authorization
+cors.allow.credentials=true
+cors.max.age=3600
+
+security.oauth2.client.scope=password
+security.oauth2.client.client-id=vottech
+security.oauth2.client.client-secret=vottech123
+security.oauth2.client.access-token-uri=http://localhost:8080/oauth/token
+
+#Security
+spring.security.user.name=admin
+spring.security.user.password=admin
