--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=api
 
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/DuckLibras
+spring.datasource.url=jdbc:mysql://localhost:3306/ducklibras
 spring.datasource.username=pinguim
 spring.datasource.password=pinguim788
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
@@ -33,7 +33,7 @@ jwt.expiration=86400000
 
 # Swagger
 swagger.api.title=DuckLibras Api
-swagger.api.description=API 
+swagger.api.description=API of the DuckLibras
 swagger.api.version=1.0
 swagger.api.contact.name=DuckLibras Api
 swagger.api.contact.email=rebecafreitasreis7@gmail.com
@@ -47,10 +47,9 @@ cors.allow.credentials=true
 cors.max.age=3600
 
 security.oauth2.client.scope=password
-security.oauth2.client.client-id=vottech
-security.oauth2.client.client-secret=vottech123
-security.oauth2.client.access-token-uri=http://localhost:8080/oauth/token
-
+security.oauth2.client.client-id=DUCKLIBRAS
+security.oauth2.client.client-secret=pato123
+security.oauth2.client.access-token-uri=http://localhost:3306/ducklibras/token/auth
 #Security
 spring.security.user.name=admin
 spring.security.user.password=admin
