--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -51,5 +51,5 @@ security.oauth2.client.client-id=DUCKLIBRAS
 security.oauth2.client.client-secret=pato123
 security.oauth2.client.access-token-uri=http://localhost:3306/ducklibras/token/auth
 #Security
-spring.security.user.name=admin
-spring.security.user.password=admin
+spring.security.user.name=pato
+spring.security.user.password=pato
