--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -38,3 +38,20 @@ swagger.api.description=API of the DuckLibras
 swagger.api.version=1.0
 swagger.api.contact.name=DuckLibras Api
 swagger.api.contact.email=rebecafreitasreis7@gmail.com
+
+# CORS
+cors.allowed.origins=*
+cors.allowed.methods=GET,POST,PUT,DELETE,OPTIONS
+cors.allowed.headers=Authorization,Content-Type
+cors.exposed.headers=Authorization
+cors.allow.credentials=true
+cors.max.age=3600
+
+#Oauth
+security.oauth2.client.scope=password
+security.oauth2.client.client-id=vottech
+security.oauth2.client.client-secret=vottech123
+security.oauth2.client.access-token-uri=http://localhost:8080/token/auth
+
+spring.security.user.name=pato
+spring.security.user.password=pato
