--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=api
 # Database
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ducklibras
-spring.datasource.username=pinguim
-spring.datasource.password=pinguim788
+spring.datasource.username=dhemerson
+spring.datasource.password=26354
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
