--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,24 +2,15 @@
 
 spring.application.name=api
 
-# Database
+#DataBase
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ducklibras
-spring.datasource.username=dhemerson
-spring.datasource.password=26354
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=SELECT 1
-spring.datasource.timeBetweenEvictionRunsMillis=3600000
-
-# JPA
-spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=${DATABASE_URL}
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
-spring.main.allow-bean-definition-overriding=true
+spring.jpa.show-sql=true
 
 # Server
 server.port=8080
