--- a/DuckLibras/app/src/main/AndroidManifest.xml
+++ b/DuckLibras/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.DuckLibras"
         tools:targetApi="31">
         <activity
+            android:name="Dicionario.presetation.SignAdapter"
+            android:exported="false" />
+        <activity
+            android:name="Dicionario.presetation.Dicionario"
+            android:exported="false" />
+        <activity
             android:name=".Cadastro"
             android:exported="false" />
         <activity
