--- a/MobileDuckLibras/app/src/main/AndroidManifest.xml
+++ b/MobileDuckLibras/app/src/main/AndroidManifest.xml
@@ -2,19 +2,34 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
-    android:allowBackup="true"
-    android:dataExtractionRules="@xml/data_extraction_rules"
-    android:fullBackupContent="@xml/backup_rules"
-    android:icon="@mipmap/ic_launcher"
-    android:label="@string/app_name"
-    android:roundIcon="@mipmap/ic_launcher_round"
-    android:supportsRtl="true"
-    android:theme="@style/Theme.MobileDuckLibras">
+        android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.MobileDuckLibras"
+        tools:targetApi="31">
+        <activity android:name=".Home.Home" />
+        <activity
+            android:name=".Dicionario.presetation.DicionarioActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DicionarioActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Login.presetation.Login"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-    <activity android:name=".Home.Home" android:exported="false" />
-    <activity android:name=".FlashCard.FlashcardActivity" android:exported="false" />
-    <activity android:name=".Dicionario.presetation.DicionarioActivity" android:exported="false" />
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
+
 </manifest>
