--- a/MobileDuckLibras/app/src/main/AndroidManifest.xml
+++ b/MobileDuckLibras/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileDuckLibras"
         tools:targetApi="31">
+
         <activity android:name=".Home.Home" />
         <activity
             android:name=".Dicionario.presetation.DicionarioActivity"
@@ -26,10 +27,13 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AulasActivity" />
+        <activity android:name=".Anotacao.AnotacaoActivity" />
+        <activity android:name=".Traducao.TraducaoActivity" />
+
     </application>
 
 </manifest>
